# flecsi-third-party

./: .cinchbranches  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: boost.cmake  caliper.cmake  cereal.cmake  cinch-utils.cmake  exodus.cmake  gasnet.cmake  hdf5.cmake  hpx.cmake  lapack.cmake  legion.cmake  metis.cmake  mpich.cmake  netcdf.cmake  parmetis.cmake  scotch.cmake  szip.cmake  thrust.cmake  zlib.cmake
docker/: Dockerfile  fedora  ubuntu
dockerfiles/: fedora  ubuntu
patches/: 250.patch  exodus.patch  metis-5.1.0-datatype.patch  parmetis-4.0.3-cmake.patch
scripts/: lapack_post_install.cmake  post_install.cmake
